--- a/index.html
+++ b/index.html
@@ -133,17 +133,56 @@
 
 
         .location-strip {
-            padding: 80px 0;
+            padding: 30px 0 30px;
             background-color: var(--terracotta);
             color: var(--cream);
         }
 
+.location-strip svg {
+    color: var(--cream);
+    opacity: 0.8;
+}
+
+.location-strip svg path:first-of-type,
+.location-strip svg path:nth-of-type(2) {
+  opacity: 0.6;
+}
+
+.location-strip svg text {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 11px;
+    font-weight: 500;
+    letter-spacing: 1px;
+}
+
+
+.map-wrap {
+  position: relative;
+  max-width: 1100px;
+  aspect-ratio: 1000 / 320; /* matches SVG viewBox */
+  margin: 0 auto;
+}
+
+
+/* Crocodile emoji marker */
+.croc-emoji {
+  position: absolute;
+  left: 36%;      /* horizontal position along the road */
+  top: 41%;       /* just above the road, sea side */
+  font-size: 18px;
+  line-height: 1;
+  opacity: 0.85;
+  pointer-events: none;
+}
+
+
         .loc-grid {
-            display: flex;
-            justify-content: space-around;
-            flex-wrap: wrap;
-            gap: 40px;
-        }
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    gap: 40px;
+    margin-top: 0px;
+}
 
         .loc-item strong {
             display: block;
@@ -275,6 +314,84 @@ with outdoor areas planned around shade, greenery, and a private pool.
 
     <section class="location-strip">
         <div class="container">
+<div class="map-wrap">
+<svg viewBox="0 0 1000 320"
+     width="100%"
+     style="max-width:1100px;margin:0 auto 16px;display:block;"
+     fill="none"
+     stroke="currentColor"
+     stroke-width="2"
+     stroke-linecap="round"
+     stroke-linejoin="round"
+preserveAspectRatio="xMidYMid meet">
+
+
+  <!-- Sea (east / top) -->
+  <!-- Sea (east / top) -->
+<path d="M120 72
+         C180 54,240 90,300 72
+         C360 54,420 92,480 74
+         C540 56,600 90,660 72
+         C720 54,780 92,840 74
+         C900 58,960 86,1020 70" />
+
+<path d="M140 96
+         C210 78,260 118,330 96
+         C400 74,470 120,540 98
+         C610 76,680 118,750 96
+         C820 74,890 116,960 98" />
+
+
+  <!-- Sun (moved closer to Amra Bari) -->
+  <circle cx="520" cy="46" r="9" />
+  <line x1="520" y1="28" x2="520" y2="20" />
+  <line x1="504" y1="36" x2="496" y2="30" />
+  <line x1="536" y1="36" x2="544" y2="30" />
+
+  <!-- ECR road -->
+  <path d="M80 150 C200 130,320 170,440 150 C560 130,680 170,800 150 C880 140,940 160,980 150" />
+  <path d="M80 170 C200 150,320 190,440 170 C560 150,680 190,800 170 C880 160,940 180,980 170" />
+
+  <!-- Road dashes -->
+  <line x1="180" y1="160" x2="200" y2="160" />
+  <line x1="300" y1="160" x2="320" y2="160" />
+  <line x1="420" y1="160" x2="440" y2="160" />
+  <line x1="540" y1="160" x2="560" y2="160" />
+  <line x1="660" y1="160" x2="680" y2="160" />
+
+<!-- Chennai marker -->
+<image href="Chennai.png"
+       x="28"
+       y="96"
+       width="48"
+       height="96"
+       preserveAspectRatio="xMidYMid meet" />
+
+<text x="52" y="170" font-size="12" text-anchor="middle">Chennai</text>
+
+
+<!-- Crocodile Park text -->
+  <text x="350" y="125" font-size="11">Crocodile Park</text>
+
+  <!-- Amra Bari logo -->
+  <image href="logo cream.png"
+         x="560"
+         y="140"
+         width="64"
+         height="84"
+         preserveAspectRatio="xMidYMid meet" />
+
+  <text x="592" y="220" font-size="12" text-anchor="middle">Amra Bari</text>
+
+  <!-- Mahabs sign -->
+  <line x1="860" y1="150" x2="860" y2="122" />
+  <rect x="860" y="102" width="90" height="28" rx="6" />
+  <text x="870" y="121" font-size="12">Mahabs →</text>
+
+</svg>
+<span class="croc-emoji" aria-hidden="true">🐊</span>
+</div>
+
             <div class="loc-grid">
                 <div class="loc-item"><strong>1 KM</strong><span>To the Beach</span></div>
                 <div class="loc-item"><strong>4 KM</strong><span>After Crocodile Park</span></div>
