--- a/index.html
+++ b/index.html
@@ -145,13 +145,15 @@
 
 .location-strip svg path:first-of-type,
 .location-strip svg path:nth-of-type(2) {
-  opacity: 0.6;
+    stroke-width: 1.5;
+    opacity: 0.55;
 }
+
 
 .location-strip svg text {
     font-family: 'Montserrat', sans-serif;
     font-size: 11px;
-    font-weight: 500;
+    font-weight: 100;
     letter-spacing: 1px;
 }
 
