--- a/index.html
+++ b/index.html
@@ -234,7 +234,14 @@
             header { height: 60vh; }
             .feature-band { grid-template-columns: 1fr; }
             .loc-grid { flex-direction: column; gap: 40px; }
+.croc-emoji {
+    top: 31%;
+    transform: translateY(-50%);
         }
+
+
+}
+
     </style>
 </head>
 <body>
