--- a/index.html
+++ b/index.html
@@ -15,96 +15,106 @@
     
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,600;1,400&family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
     
-    <style>
-        :root {
-            --terracotta: #a6523d;
-            --gold: #c5a35d;
-            --sage: #7a8c78;
-            --cream: #f9f7f2;
-            --white: #ffffff;
-            --text: #333333;
-        }
+   <style>
+:root {
+    --terracotta: #a6523d;
+    --gold: #c5a35d;
+    --sage: #7a8c78;
+    --cream: #f9f7f2;
+    --white: #ffffff;
+    --text: #333333;
+}
 
-        body, html {
-            margin: 0;
-            padding: 0;
-            font-family: 'Montserrat', sans-serif;
-            background-color: var(--cream);
-            color: var(--text);
-            line-height: 1.6;
-            text-align: center;
-        }
+body, html {
+    margin: 0;
+    padding: 0;
+    font-family: 'Montserrat', sans-serif;
+    background-color: var(--cream);
+    color: var(--text);
+    line-height: 1.6;
+    text-align: center;
+}
 
-        h1, h2, h3 {
-            font-family: 'Cormorant Garamond', serif;
-            font-weight: 600;
-            color: var(--terracotta);
-        }
+h1, h2, h3 {
+    font-family: 'Cormorant Garamond', serif;
+    font-weight: 600;
+    color: var(--terracotta);
+}
 
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 0 25px;
-        }
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 25px;
+}
 
-        header {
-            position: relative;
-            height: 85vh;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            background: linear-gradient(rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45)), 
-                        url('hero-bg.jpg') center/cover no-repeat;
-            color: var(--white);
-        }
+/* ---------- HERO ---------- */
 
-        .logo {
-            max-width: 180px;
-            margin-bottom: 20px;
-        }
+header {
+    position: relative;
+    height: 85vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background:
+        linear-gradient(rgba(0,0,0,0.45), rgba(0,0,0,0.45)),
+        url('hero-bg.jpg') center / cover no-repeat;
+    color: var(--white);
+}
 
-        header h1 {
-            font-size: clamp(2rem, 8vw, 4rem);
-            margin: 0;
-            color: var(--white);
-            letter-spacing: 2px;
-        }
+.logo {
+    max-width: 180px;
+    margin-bottom: 20px;
+}
 
-        .subtitle {
-            font-size: 1.5rem;
-            color: var(--cream);
-            font-family: 'Cormorant Garamond', serif;
-            font-style: italic;
-            margin-top: 10px;
-        }
+header h1 {
+    font-size: clamp(2rem, 8vw, 4rem);
+    margin: 0;
+    color: var(--white);
+    letter-spacing: 2px;
+}
 
-        .intro {
-            padding: 100px 0 60px;
-            background-color: var(--white);
-        }
+.subtitle {
+    font-size: 1.5rem;
+    color: var(--cream);
+    font-family: 'Cormorant Garamond', serif;
+    font-style: italic;
+    margin-top: 10px;
+}
 
-        .intro h2 { font-size: 2.8rem; margin-bottom: 20px; }
+/* ---------- INTRO ---------- */
 
-        .intro p {
-            max-width: 800px;
-            margin: 0 auto 60px;
-            font-size: 1.1rem;
-            font-weight: 300;
-        }
+.intro {
+    padding: 100px 0 60px;
+    background-color: var(--white);
+}
 
-        .feature-band {
+.intro h2 {
+    font-size: 2.8rem;
+    margin-bottom: 20px;
+}
+
+.intro p {
+    max-width: 800px;
+    margin: 0 auto 60px;
+    font-size: 1.1rem;
+    font-weight: 300;
+}
+
+/* ---------- FEATURES ---------- */
+
+.feature-band {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
     gap: 20px;
     margin-bottom: 40px;
 }
 
-        .feature-card { 
-            padding: 30px 15px;
-        }
+.feature-card {
+    padding: 30px 15px;
+}
 
-        .icon {
+.icon {
     width: 36px;
     height: 36px;
     margin: 0 auto 18px;
@@ -112,17 +122,17 @@
     opacity: 0.9;
 }
 
-        .feature-card h3 {
-            color: var(--gold);
-            text-transform: uppercase;
-            font-size: 0.75rem;
-            letter-spacing: 2px;
-            margin-bottom: 12px;
-            font-family: 'Montserrat', sans-serif;
-            font-weight: 600;
-        }
+.feature-card h3 {
+    color: var(--gold);
+    text-transform: uppercase;
+    font-size: 0.75rem;
+    letter-spacing: 2px;
+    margin-bottom: 12px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
+}
 
-        .feature-card p {
+.feature-card p {
     max-width: 260px;
     margin: 0 auto;
 }
@@ -131,12 +141,13 @@
     opacity: 1;
 }
 
+/* ---------- LOCATION STRIP ---------- */
 
-        .location-strip {
-            padding: 30px 0 30px;
-            background-color: var(--terracotta);
-            color: var(--cream);
-        }
+.location-strip {
+    padding: 30px 0;
+    background-color: var(--terracotta);
+    color: var(--cream);
+}
 
 .location-strip svg {
     color: var(--cream);
@@ -149,100 +160,123 @@
     opacity: 0.55;
 }
 
-
 .location-strip svg text {
     font-family: 'Montserrat', sans-serif;
     font-size: 11px;
-    font-weight: 100;
+    font-weight: 400;
     letter-spacing: 1px;
 }
 
+/* ---- MAP CONTAINER (CRITICAL FIX) ---- */
 
 .map-wrap {
-  position: relative;
-  max-width: 1100px;
-  aspect-ratio: 1000 / 320; /* matches SVG viewBox */
-  margin: 0 auto;
+    position: relative;
+    max-width: 1100px;
+    aspect-ratio: 1000 / 320;
+    margin: 0 auto;
+    padding-bottom: 24px; /* prevents overlap with distance text */
 }
 
-
-/* Crocodile emoji marker */
+/* Crocodile emoji */
 .croc-emoji {
-  position: absolute;
-  left: 36%;      /* horizontal position along the road */
-  top: 41%;       /* just above the road, sea side */
-  font-size: 18px;
-  line-height: 1;
-  opacity: 0.85;
-  pointer-events: none;
+    position: absolute;
+    left: 36%;
+    top: 41%;
+    font-size: 18px;
+    line-height: 1;
+    opacity: 0.85;
+    pointer-events: none;
+    z-index: 1;
 }
 
+/* ---------- DISTANCES ---------- */
 
-        .loc-grid {
+.loc-grid {
+    position: relative;
+    z-index: 2; /* ensures text is always above illustration */
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
     gap: 40px;
-    margin-top: 0px;
+    margin-top: 0;
 }
 
-        .loc-item strong {
-            display: block;
-            font-family: 'Montserrat', sans-serif;
-            font-size: 3.2rem;
-            font-weight: 700;
-            line-height: 1;
-            margin-bottom: 8px;
-        }
-
-        .loc-item span {
-            font-size: 0.8rem;
-            text-transform: uppercase;
-            letter-spacing: 1.5px;
-        }
-
-        .social {
-            padding: 100px 0;
-            background-color: var(--white);
-        }
-
-        .insta-btn {
-            display: inline-block;
-            padding: 18px 45px;
-            background-color: var(--gold);
-            color: white;
-            text-decoration: none;
-            font-weight: 600;
-            letter-spacing: 1.5px;
-            transition: 0.3s;
-        }
-
-        .insta-btn:hover {
-            background-color: var(--terracotta);
-            transform: translateY(-3px);
-        }
-
-        footer {
-            padding: 50px 0;
-            font-size: 0.8rem;
-            color: var(--sage);
-            background-color: var(--white);
-            border-top: 1px solid #f2f2f2;
-        }
-
-        @media (max-width: 600px) {
-            header { height: 60vh; }
-            .feature-band { grid-template-columns: 1fr; }
-            .loc-grid { flex-direction: column; gap: 40px; }
-.croc-emoji {
-    top: 31%;
-    transform: translateY(-50%);
-        }
-
-
+.loc-item strong {
+    display: block;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 3.2rem;
+    font-weight: 700;
+    line-height: 1;
+    margin-bottom: 8px;
 }
 
-    </style>
+.loc-item span {
+    font-size: 0.8rem;
+    text-transform: uppercase;
+    letter-spacing: 1.5px;
+}
+
+/* ---------- SOCIAL ---------- */
+
+.social {
+    padding: 100px 0;
+    background-color: var(--white);
+}
+
+.insta-btn {
+    display: inline-block;
+    padding: 18px 45px;
+    background-color: var(--gold);
+    color: white;
+    text-decoration: none;
+    font-weight: 600;
+    letter-spacing: 1.5px;
+    transition: 0.3s;
+}
+
+.insta-btn:hover {
+    background-color: var(--terracotta);
+    transform: translateY(-3px);
+}
+
+/* ---------- FOOTER ---------- */
+
+footer {
+    padding: 50px 0;
+    font-size: 0.8rem;
+    color: var(--sage);
+    background-color: var(--white);
+    border-top: 1px solid #f2f2f2;
+}
+
+/* ---------- MOBILE ---------- */
+
+@media (max-width: 600px) {
+    header {
+        height: 60vh;
+    }
+
+    .feature-band {
+        grid-template-columns: 1fr;
+    }
+
+    .loc-grid {
+        flex-direction: column;
+        gap: 40px;
+    }
+
+    .map-wrap {
+        padding-bottom: 40px;
+    }
+
+    .croc-emoji {
+        top: 31%;
+        transform: translateY(-50%);
+        font-size: 16px;
+    }
+}
+</style>
+
 </head>
 <body>
 
