--- a/index.html
+++ b/index.html
@@ -173,15 +173,14 @@ header h1 {
     position: relative;
     max-width: 1100px;
     aspect-ratio: 1000 / 320;
-    margin: 0 auto;
-    padding-bottom: 24px; /* prevents overlap with distance text */
+    margin: 0 auto 12px;   /* pulls distances closer */
 }
 
-/* Crocodile emoji */
+/* Crocodile emoji marker */
 .croc-emoji {
     position: absolute;
     left: 36%;
-    top: 41%;
+    top: 128px;              /* DESKTOP: fixed, stable */
     font-size: 18px;
     line-height: 1;
     opacity: 0.85;
