--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,600;1,400&family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
     
-   <style>
+<style>
 :root {
     --terracotta: #a6523d;
     --gold: #c5a35d;
@@ -144,12 +144,16 @@ header h1 {
 /* ---------- LOCATION STRIP ---------- */
 
 .location-strip {
-    padding: 30px 0;
+    padding: 30px 0 24px;
     background-color: var(--terracotta);
     color: var(--cream);
 }
 
 .location-strip svg {
+    display: block;
+    width: 100%;
+    max-width: 1100px;
+    margin: 0 auto 12px;
     color: var(--cream);
     opacity: 0.8;
 }
@@ -167,20 +171,21 @@ header h1 {
     letter-spacing: 1px;
 }
 
-/* ---- MAP CONTAINER (CRITICAL FIX) ---- */
+/* ---------- MAP WRAP ---------- */
 
 .map-wrap {
     position: relative;
     max-width: 1100px;
-    aspect-ratio: 1000 / 320;
-    margin: 0 auto 12px;   /* pulls distances closer */
+    margin: 0 auto 8px;
 }
 
-/* Crocodile emoji marker */
+/* ---------- CROCODILE MARKER ---------- */
+/* DESKTOP: fixed pixel position */
+
 .croc-emoji {
     position: absolute;
     left: 36%;
-    top: 128px;              /* DESKTOP: fixed, stable */
+    top: 118px;
     font-size: 18px;
     line-height: 1;
     opacity: 0.85;
@@ -192,7 +197,7 @@ header h1 {
 
 .loc-grid {
     position: relative;
-    z-index: 2; /* ensures text is always above illustration */
+    z-index: 2;
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
@@ -249,8 +254,10 @@ footer {
 }
 
 /* ---------- MOBILE ---------- */
+/* IMPORTANT: single, flat media query */
 
 @media (max-width: 600px) {
+
     header {
         height: 60vh;
     }
@@ -264,17 +271,16 @@ footer {
         gap: 40px;
     }
 
-    .map-wrap {
-        padding-bottom: 40px;
-    }
-
+    /* MOBILE croc position — percentage based */
     .croc-emoji {
-        top: 31%;
+        top: 34%;
         transform: translateY(-50%);
         font-size: 16px;
     }
 }
 </style>
+
+
 
 </head>
 <body>
