--- a/index.html
+++ b/index.html
@@ -176,7 +176,8 @@ header h1 {
 .map-wrap {
     position: relative;
     max-width: 1100px;
-    margin: 0 auto 8px;
+    margin: 0 auto;
+    padding-bottom: 48px; /* creates safe zone under croc */
 }
 
 /* ---------- CROCODILE MARKER ---------- */
