--- a/index.html
+++ b/index.html
@@ -177,22 +177,9 @@ header h1 {
     position: relative;
     max-width: 1100px;
     margin: 0 auto;
-    padding-bottom: 48px; /* creates safe zone under croc */
+    padding-bottom: 56px; /* creates safe zone under croc */
 }
 
-/* ---------- CROCODILE MARKER ---------- */
-/* DESKTOP: fixed pixel position */
-
-.croc-emoji {
-    position: absolute;
-    left: 36%;
-    top: 130px;
-    font-size: 18px;
-    line-height: 1;
-    opacity: 0.85;
-    pointer-events: none;
-    z-index: 1;
-}
 
 /* ---------- DISTANCES ---------- */
 
@@ -272,12 +259,7 @@ footer {
         gap: 40px;
     }
 
-    /* MOBILE croc position — percentage based */
-    .croc-emoji {
-        top: 34%;
-        transform: translateY(-50%);
-        font-size: 16px;
-    }
+   
 }
 </style>
 
@@ -420,7 +402,14 @@ preserveAspectRatio="xMidYMid meet">
 
 
 <!-- Crocodile Park text -->
-  <text x="350" y="125" font-size="11">Crocodile Park</text>
+  <text x="350" y="140" font-size="11">Crocodile Park</text>
+<text x="400"
+      y="150"
+      font-size="16"
+      text-anchor="middle"
+      dominant-baseline="middle">
+🐊
+</text>
 
   <!-- Amra Bari logo -->
   <image href="logo cream.png"
@@ -438,7 +427,7 @@ preserveAspectRatio="xMidYMid meet">
   <text x="870" y="121" font-size="12">Mahabs →</text>
 
 </svg>
-<span class="croc-emoji" aria-hidden="true">🐊</span>
+
 </div>
 
             <div class="loc-grid">
