--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@ preserveAspectRatio="xMidYMid meet">
   <text x="350" y="140" font-size="11">Crocodile Park</text>
 <text x="400"
       y="150"
-      font-size="16"
+      font-size="36"
       text-anchor="middle"
       dominant-baseline="middle">
 🐊
@@ -451,6 +451,24 @@ preserveAspectRatio="xMidYMid meet">
             <p>&copy; 2026 AMRA BARI | ECR CHENNAI | TAMIL NADU</p>
         </div>
     </footer>
+
+<!-- Default Statcounter code for Amra Bari
+https://amrabari.com/ -->
+<script type="text/javascript">
+var sc_project=13203827; 
+var sc_invisible=1; 
+var sc_security="fc6d9105"; 
+</script>
+<script type="text/javascript"
+src="https://www.statcounter.com/counter/counter.js"
+async></script>
+<noscript><div class="statcounter"><a title="Web Analytics"
+href="https://statcounter.com/" target="_blank"><img
+class="statcounter"
+src="https://c.statcounter.com/13203827/0/fc6d9105/1/"
+alt="Web Analytics"
+referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
+<!-- End of Statcounter Code -->
 
 </body>
 </html>
